FIXED ALIGN AAAA

--- a/frontend/style/style.css
+++ b/frontend/style/style.css
@@ -34,8 +34,8 @@ html {
 }
 
 .terminal {
-  position: absolute;
-  left: 39%;
+  position: relative;
+  left: 30%;
   top: 20%;
   z-index: 1;
   display:block;
